# pgmfactors

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
apps/: pgmexample.cpp
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/pgm/: factor.hpp  rv.hpp
include/pgmfactors/: pgmfactors.hpp
scripts/: reachable.py
source/: factor.cpp  pgmfactors.cpp
test/: CMakeLists.txt  pgmfactors_test.cpp  test_factor.cpp
